spacing fix/tooltip example

--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
     margin: 0;
     padding: 0;
+    font: 14px 'Poppins', Arial, Helvetica, sans-serif;
 }
 
 section {
+    position: relative;
     height: 100vh;
     width: 100%;
 }
@@ -18,10 +20,17 @@ img {
     z-index: 1;
 }
 
+/* old crop  */
 #section-1 img {
     height: 100vh;
     width: 100%;
     object-fit: contain;
+}
+
+/* new crop  */
+.MAC img, .lightleft img, .lightright img {
+    height: auto !important;
+    width: 100%;
 }
 
 .page-1 img, img#page-2, img#page-3 {
@@ -30,7 +39,40 @@ img {
     object-fit: cover !important;
 }
 
-.gundam{
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 300px;
+    background-color: #000000;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -150px;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #000000 transparent transparent transparent;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
+
+.gundam {
     position: absolute;
     top: 0;
     left: 0;
@@ -51,11 +93,10 @@ img {
 
 .lightleft {
     position: absolute;
-    bottom: 5%;
+    bottom: 10%;
     left: 5%;
     z-index: 16;
-    height: 890px;
-    width: 900px;
+    width: 34%;
 }
 
 .lightleft img {
@@ -66,6 +107,9 @@ img {
 .lightright{
     position: absolute;
     z-index: 16;
+    bottom: 10%;
+    right: 8%;
+    width: 34%;
 }
 
 .glass{
@@ -102,6 +146,11 @@ img {
 .MAC {
     position: absolute;
     z-index: 5; 
+    bottom: 20%;
+    left: 45%;
+    height: auto;
+    width: 12%;
+    z-index: 100;
 }
 
 .note {
